# poke-shakespeare

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: config.py  database.py  events.py
app/connectors/: base.py  pokemon.py  shakespeare.py
app/models/domain/: pokemon.py
app/models/responses/: pokemon.py
app/repositories/: base.py  pokemon.py
app/routes/: pokemon.py  router.py
app/services/: base.py  pokemon.py
tests/test_routes/: test_pokemon.py
