[tool.poetry]
name = "poke-shakespeare"
version = "0.1.0"
description = ""
authors = ["Giacomo Scolari <giacomo.scolari92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
aiohttp = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
