[tool.poetry]
authors = ["Giacomo Scolari <giacomo.scolari92@gmail.com>"]
description = ""
name = "poke-shakespeare"
version = "0.1.0"

[tool.poetry.dependencies]
aioredis = "^1.3.1"
fastapi = "^0.61.1"
python = "^3.7"
requests = "^2.24.0"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-asyncio = "^0.14.0"

[tool.pytest.ini_options]
filterwarnings = "error"
testpaths = "tests"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
